--- a/.env.schema
+++ b/.env.schema
@@ -1,41 +1,41 @@
-SECRET_DISCORD_TOKEN=
+SECRET_DISCORD_TOKEN=ODk1MjM5NzExOTQwMDM4NjU3.YV1q9A.ipH_DgvcLpYJOtStlTCWAc0iqE0
 
-SECRET_YT_API_KEY=
+SECRET_YT_API_KEY=AIzaSyDUTi1qBYH89n1mTekftqDgVaqNWV7lsUY
 
-CONFIG_PREFIX=
+CONFIG_PREFIX=>
 
-CONFIG_EMBED_COLOR=
+CONFIG_EMBED_COLOR=FFC0CB
 
-CONFIG_STATUS_TYPE=
+CONFIG_STATUS_TYPE=listening
 
-CONFIG_STATUS_ACTIVITY=
+CONFIG_STATUS_ACTIVITY=music with {usersCount} users
 
-CONFIG_OWNERS=
+CONFIG_OWNERS=500523527213154304
 
-CONFIG_YOUTUBE_DATA_STRATEGY=
+CONFIG_YOUTUBE_DATA_STRATEGY=api
 
-CONFIG_DISABLE_INVITE_CMD=
+CONFIG_DISABLE_INVITE_CMD=no
 
-CONFIG_DEFAULT_VOLUME=
+CONFIG_DEFAULT_VOLUME=50
 
-CONFIG_MAX_VOLUME=
+CONFIG_MAX_VOLUME=100
 
-CONFIG_DISABLE_SONG_SELECTION=
+CONFIG_DISABLE_SONG_SELECTION=no
 
-CONFIG_SEARCH_MAX_RESULTS=
+CONFIG_SEARCH_MAX_RESULTS=5
 
-CONFIG_SELECT_TIMEOUT=
+CONFIG_SELECT_TIMEOUT=15
 
-CONFIG_ALLOW_DUPLICATE=
+CONFIG_ALLOW_DUPLICATE=yes
 
-CONFIG_CACHE_YOUTUBE_DOWNLOADS=
+CONFIG_CACHE_YOUTUBE_DOWNLOADS=no
 
-CONFIG_CACHE_MAX_LENGTH=
+CONFIG_CACHE_MAX_LENGTH=5400
 
-CONFIG_DELETE_QUEUE_TIMEOUT=
+CONFIG_DELETE_QUEUE_TIMEOUT=180
 
-CONFIG_TOTALSHARDS=
+CONFIG_TOTALSHARDS=auto
 
-CONFIG_FETCH_ALL_USERS=
+CONFIG_FETCH_ALL_USERS=no
 
-CONFIG_DEBUG=
+CONFIG_DEBUG=no
