--- a/.env.schema
+++ b/.env.schema
@@ -1,6 +1,6 @@
-SECRET_DISCORD_TOKEN=ODk1MjM5NzExOTQwMDM4NjU3.YV1q9A.ipH_DgvcLpYJOtStlTCWAc0iqE0
+SECRET_DISCORD_TOKEN=
 
-SECRET_YT_API_KEY=AIzaSyDUTi1qBYH89n1mTekftqDgVaqNWV7lsUY
+SECRET_YT_API_KEY=
 
 CONFIG_PREFIX=>
 
@@ -10,7 +10,7 @@ CONFIG_STATUS_TYPE=listening
 
 CONFIG_STATUS_ACTIVITY=music with {usersCount} users
 
-CONFIG_OWNERS=500523527213154304
+CONFIG_OWNERS=
 
 CONFIG_YOUTUBE_DATA_STRATEGY=api
 
